apps/goatlint/src/snapshots/fixtures__cli__linter_--max-warnings 1 -c config-max-warnings.json debugger.js@goatlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --max-warnings 1 -c config-max-warnings.json debugger.js
working directory: fixtures/cli/linter
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 126 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
