apps/goatlint/src/snapshots/fixtures__cli__linter_debugger.js@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: debugger.js
working directory: fixtures/cli/linter
----------

  ! eslint(no-debugger): `debugger` statement is not allowed
   ,-[debugger.js:1:1]
 1 | debugger;
   : ^^^^^^^^^
   `----
  help: Remove the debugger statement

Found 1 warning and 0 errors.
Finished in <variable>ms on 1 file with 93 rules using 1 threads.
----------
CLI result: LintSucceeded
----------
