apps/goatlint/src/snapshots/fixtures__cli__nested_config_--config oxlint-no-console.json@oxlint.snap
---
source: apps/goatlint/src/tester.rs
---
########## 
arguments: --config goatlint-no-console.json
working directory: fixtures/cli/nested_config
----------

  x eslint(no-console): Unexpected console statement.
   ,-[console.ts:1:1]
 1 | console.log("test");
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[package1-empty-config/console.ts:1:1]
 1 | console.log("test");
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[package2-no-config/console.ts:1:1]
 1 | console.log("test");
   : ^^^^^^^^^^^
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[package3-deep-config/src/components/component.js:2:3]
 1 | export function Component() {
 2 |   console.log("hello");
   :   ^^^^^^^^^^^
 3 | }
   `----
  help: Delete this console statement.

  x eslint(no-console): Unexpected console statement.
   ,-[package4-as-cwd/component.js:2:3]
 1 | export function Component() {
 2 |   console.log("hello");
   :   ^^^^^^^^^^^
 3 | }
   `----
  help: Delete this console statement.

Found 0 warnings and 5 errors.
Finished in <variable>ms on 8 files with 1 rules using 1 threads.
----------
CLI result: LintFoundErrors
----------
